(lang dune 2.2)
(name coq-bot)

(generate_opam_files true)

(source (github coq/bot))
(authors "Théo Zimmermann")
(maintainers "Théo Zimmermann <theo.zimmermann@inria.fr>")
(license MIT)

(package
 (name coq-bot)
 (synopsis "A (Coq Development Team) bot written in OCaml")
 (depends
  (alcotest :with-test)
  (dune (>= 2.2))
  (base (>= v0.13.0))
  (lwt (>= 4.5.0))
  (cohttp-lwt (>= 2.1.3))
  (cohttp-lwt-unix (>= 2.1.3))
  (lwt_ssl (>= 1.1.3))
  (ssl (>= 0.5.0))
  (stdio (>= v0.13.0))
  (yojson (>= 1.7.0))
  (bot-components :dev)
  (toml (>= 5.0.0))
  (odoc (>= 1.4.0)))
)
(package
 (name bot-components)
 (synopsis "Building blocks to make your own bots")
 (depends
  (alcotest :with-test)
  (dune (>= 2.2))
  (base (>= v0.13.0))
  (lwt (>= 4.5.0))
  (cohttp-lwt (>= 2.1.3))
  (cohttp-lwt-unix (>= 2.1.3))
  (lwt_ssl (>= 1.1.3))
  (ssl (>= 0.5.0))
  (stdio (>= v0.13.0))
  (hex (>= 1.3.0))
  (nocrypto (>= 0.5.4))
  (eqaf (>= 0.7))
  (yojson (>= 1.7.0))
  (graphql_ppx (>= 0.7.1))
  (x509 (>= 0.11.2))
  (cstruct (>= 5.2.0))
  (odoc (>= 1.4.0)))
)
