(lang dune 2.2)
(name coq-bot)

(generate_opam_files true)

(source (github coq/bot))
(authors "Théo Zimmermann")
(maintainers "Théo Zimmermann <theo.zimmermann@inria.fr>")
(license MIT)

(package
 (name coq-bot)
 (synopsis "A (Coq Development Team) bot written in OCaml")
 (depends
  (dune (>= 2.2))
  (base (>= v0.14.0))
  (lwt (>= 5.3.0))
  (cohttp-lwt (>= 2.5.4))
  (cohttp-lwt-unix (>= 2.5.4))
  (lwt_ssl (>= 1.1.3))
  (ssl (>= 0.5.9))
  (mirage-crypto (>= 0.8.7))
  (stdio (>= v0.14.0))
  (yojson (>= 1.7.0))
  (bot-components :dev)
  (toml (>= 5.0.0))
  (odoc (and (>= 1.5.2) :with-doc)))
)
(package
 (name bot-components)
 (synopsis "Building blocks to make your own bots")
 (depends
  (dune (>= 2.2))
  (base (>= v0.14.0))
  (lwt (>= 5.3.0))
  (cohttp-lwt (>= 2.5.4))
  (cohttp-lwt-unix (>= 2.5.4))
  (lwt_ssl (>= 1.1.3))
  (ssl (>= 0.5.9))
  (stdio (>= v0.14.0))
  (hex (>= 1.4.0))
  (mirage-crypto (>= 0.8.7))
  (eqaf (>= 0.7))
  (yojson (>= 1.7.0))
  (graphql_ppx (>= 1.0.1))
  (x509 (>= 0.11.2))
  (cstruct (>= 5.0.0))
  (odoc (and (>= 1.5.2) :with-doc)))
)
