(library
 (name Bot_components)
 (public_name bot-components)
 (libraries base cohttp-lwt-unix cstruct eqaf hex mirage-crypto stdio str
   x509 yojson)
 (private_modules GraphQL_query GitHub_GraphQL Utils)
 (modules_without_implementation GitHub_types GitLab_types Bot_info)
 (preprocess
  (pps graphql_ppx -- -schema bot-components/schema.json))
 (preprocessor_deps
  (file schema.json)))

(rule
 (targets schema.json)
 (deps .github-token (universe))
 (action
  (with-stdout-to
   %{targets}
   (run get-graphql-schema --json --header
     "Authorization=Bearer %{read:.github-token}"
     https://api.github.com/graphql)))
 (mode promote))

(env
 (dev
  (flags :standard -w -9)))
